Respect jdk language level 17 (patch .8)